<resources>
    <string name="app_name">WikiMovies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WikiMovies</string>
    <string name="nav_header_subtitle">Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="menu_login">Iniciar Sesión</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="meunu_Personalizar_App">Personalizar Aplicación</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_registrarse">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="o">O</string>

    <!-- String related to shared preferences -->
    <string name="preference_user_key">com.example.InfoPelis.User</string>
    <string name="preference_user_key_default">none</string>

    <string name="Comunicacion">Comunicación</string>
    ,
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="iniciar">Iniciar</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="welcomeMessage">Bienvenido a WikiMovies</string>

</resources>
