<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login2"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/usuario"
            android:title="@string/menu_cuenta"
            android:visible="false"/>
        <item
            android:id="@+id/nav_personalizar"
            android:icon="@drawable/ajustes"
            android:title="@string/meunu_Personalizar_App" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout"
            android:visible="false"/>
    </group>

    <item android:title="@string/Comunicacion">
        <menu>
            <item
                android:id="@+id/nav_ayuda"
                android:icon="@drawable/ayuda"
                android:title="@string/menu_ayuda" />
            <item
                android:id="@+id/nav_acercaDe"
                android:icon="@drawable/informacion"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
